# track1_web

./: .gitignore  README.md  create_admin.py  create_db.py  get_all_news.py  pyproject.toml  python.orh.html  requirements.txt  server.py  weather.py  webapp.db
templates/: index.html
webapp/: __init__.py  db.py  forms.py  model.py  python_org_news.py  weather.py
webapp/admin/: views.py
webapp/news/: models.py  views.py
webapp/templates/: base.html  index.html  login.html  menu.html
webapp/templates/admin/: index.html
webapp/templates/news/: index.html
webapp/templates/user/: login.html
webapp/user/: decorators.py  forms.py  models.py  views.py
