[tool.poetry]
name = "track1-web"
version = "0.1.0"
description = ""
authors = ["Artem Voskresensky <metravs@gmail.com>"]
readme = "README.md"
packages = [{include = "track1_web"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
wtforms = "^3.0.1"
flask-wtf = "^1.0.1"
flask-sqlalchemy = "^3.0.2"
requests = "^2.28.2"
bs4 = "^0.0.1"
flask-login = "^0.6.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
